# gourmestre

./: .gitignore  Makefile  README.md
backend/: Cargo.toml
backend/src/: db.rs  main.rs  models.rs
docker/: Dockerfile  docker-compose.yml  init.sql
frontend/: dashboard.html  index.html  login.html  register.html
frontend/static/: htmx.min.js  json-enc.js  style.css
