[package]
name = "gourmestre"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["full"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
tokio-postgres = { version = "0.7.13" }
deadpool-postgres = { version = "0.14.1" }
http-body-util = "0.1.3"
urlencoding = "2.1.3"
mime_guess = "2.0.5"
dotenvy = "0.15.7"

